--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-pagination": "^0.1.0",
     "hexo-render-pug": "^1.2.0",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-markdown-it": "^3.4.1",
