--- a/_config.yml
+++ b/_config.yml
@@ -66,13 +66,14 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 12
+per_page: 10
 pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: cactus-white
+#theme: cactus-white
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
