--- a/_config.yml
+++ b/_config.yml
@@ -72,8 +72,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-#theme: cactus-white
-theme: next
+theme: cactus-white
+#theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
